exclude cat and tags sitemap

--- a/src/content/posts/guia-completa-de-seo.mdx
+++ b/src/content/posts/guia-completa-de-seo.mdx
@@ -5,7 +5,7 @@ date: 2024-05-03T06:00:00+00:00
 image: "/images/posts/guia-seo-completa.webp"
 categories: ["SEO"]
 authors: ["Andrei Octavian"]
-tags: ["Posicionamiento", "Estrategias SEO", "Optimización web"]
+tags: ["Posicionamiento", "Estrategias SEO", "Optimizacion web"]
 draft: false
 ---
 
